Fixed close button padding to align to list item height

--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ li {
    top: 50%;
    right: 0%;
    cursor: pointer;
-   padding: 8px 16px 12px 16px;
+   padding: 4px 16px 10px 16px;
    transform: translate(0%, -50%);
    border-left: 1px solid #DDDDDD;
 }
